# metacall-inspect-poc

./: .gitignore  CMakeLists.txt  README.md  run.sh
benchmarks/: bench_inspect.cpp
include/ast_inspect/: ast_cli.hpp  ast_extract.hpp  ast_serialize.hpp  ast_types.hpp
scripts/: test.js  test.py
src/: ast_cli.cpp  ast_extract.cpp  ast_inspect.cpp  ast_main.cpp  ast_serialize.cpp  main.cpp
tests/: test_inspect.cpp
